Fix a couple issues on Safari/iOS

--- a/wp-content/themes/twentythirteen-child/assets/style/global/team.less
+++ b/wp-content/themes/twentythirteen-child/assets/style/global/team.less
@@ -37,7 +37,8 @@
 
 	&:hover {
 		.team-button {
-			transform: translateY(-150px);
+			// transform: translateY(-150px);
+			bottom: 0px;
 		}
 	}
 }
@@ -284,9 +285,7 @@
 }
 
 .touch {
-
 	.team-button {
-		&:extend(.touch .work__title);
+		bottom: 0px;
 	}
-
 }
