--- a/wp-content/themes/twentythirteen-child/assets/style/global/work.less
+++ b/wp-content/themes/twentythirteen-child/assets/style/global/work.less
@@ -64,7 +64,7 @@
 			}
 
 			.work__title {
-				transform: translateY(-150px);
+				bottom: 0px;
 			}
 		}
 	}
@@ -107,7 +107,7 @@
 	background-color: rgba(0,0,0,0.8);
 	z-index: 1;
 
-	transition: transform 0.2s ease; 
+	transition: bottom 0.2s ease; 
 }
 
 .client_name {
@@ -238,9 +238,7 @@
 }
 
 .touch {
-
 	.work__title {
-		bottom: 0;
+		bottom: 0px;
 	}
-
 }
