--- a/wp-content/themes/twentythirteen-child/assets/style/style.css
+++ b/wp-content/themes/twentythirteen-child/assets/style/style.css
@@ -1479,7 +1479,7 @@ a:hover .instagram_logo {
   filter: grayscale(0%);
 }
 .work__cell__container:hover .work__title {
-  transform: translateY(-150px);
+  bottom: 0px;
 }
 .work__cell img {
   display: block;
@@ -1514,7 +1514,7 @@ a:hover .instagram_logo {
   text-align: right;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
-  transition: transform 0.2s ease;
+  transition: bottom 0.2s ease;
 }
 .client_name,
 .team-button .team-member-name {
@@ -1619,9 +1619,8 @@ a:hover .instagram_logo {
 .no_btn {
   display: none;
 }
-.touch .work__title,
-.touch .team-button {
-  bottom: 0;
+.touch .work__title {
+  bottom: 0px;
 }
 * {
   -webkit-box-sizing: border-box;
@@ -1963,7 +1962,7 @@ a:hover .instagram_logo {
   overflow: hidden;
 }
 .people_btn:hover .team-button {
-  transform: translateY(-150px);
+  bottom: 0px;
 }
 .team_btn {
   position: absolute;
@@ -2162,6 +2161,9 @@ a:hover .instagram_logo {
   .close_btn {
     margin: 10px;
   }
+}
+.touch .team-button {
+  bottom: 0px;
 }
 .contact_wrap {
   position: absolute;
